//protoc --go_out=plugins=grpc:.
syntax = "proto3";
option go_package="src/proto/user/v1;pb_user_v1";

message RoleProto {
  string name = 1;
  string remark = 2;
  int32 data_permit = 3;
  int32 status = 4;
}

message RoleMenuPermissionProto {
  int64 role_id = 1;
  int64 menu_id = 2;
  int64 permission_id = 3;
}

message CreateMenuPermRequestProto {
  string name = 1;
  string remark = 2;
  int32 data_permit = 3;
  int32 status = 4;
  repeated RoleMenuPermissionProto role_menu_permissions = 5;
}
